# moq

./: .editorconfig  .gitignore  .gitmodules  .readthedocs.yaml  .release-plz.toml  .remarkignore  .remarkrc.mjs  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_OUTLINE.md  Dockerfile  README.md  biome.jsonc  deny.toml  dev-review.md  draft-lcurley-moq-compression.md  draft-lcurley-moq-lite.md  draft-lcurley-moq-probe.md  draft-lcurley-moq-relay-hops.md  draft-lcurley-moq-timestamp.md  flake.nix  go.work  js.just  justfile  lychee.toml  package.json  pyproject.toml  rs.just  rust-toolchain.toml  x
dev/robo/: Cargo.toml  justfile  package.json
dev/robo/src/: index.html  index.ts  main.rs  robo.rs  video.rs
py/moq/: pyproject.toml
py/moq/examples/: announced.py  clock.py
rs/hang/: CHANGELOG.md  Cargo.toml  MOQ_MEDIA_INTEGRATION.md  PLAYBACK.md  README.md
rs/hang/examples/: subscribe.rs  video.rs
rs/hang/src/: av.rs  container.rs  error.rs  lib.rs
rs/hang/src/catalog/: chat.rs  consumer.rs  container.rs  data.rs  detection.rs  duration_millis.rs  mod.rs  msf.rs  priority.rs  produce.rs  producer.rs  reader.rs  root.rs  section.rs  thumbnail.rs  track.rs  writer.rs
rs/hang/src/container/: consumer.rs  frame.rs  mod.rs  producer.rs
rs/hang/src/decode/: audio.rs  mod.rs  video.rs
rs/hang/src/feedback/: capabilities.rs
rs/hang/src/import/: aac.rs  avc3.rs  decoder.rs  fmp4.rs  hev1.rs  hls.rs  mod.rs  opus.rs
rs/hang/src/model/: broadcast.rs  frame.rs  group.rs  timestamp.rs  track.rs
rs/hang/src/render/: mod.rs  video.rs
rs/hang/src/wrapper/: broadcast.rs  group.rs  track.rs
rs/libmoq/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  build.rs  build.sh  moq.pc.in
rs/libmoq/cmake/: moq-config.cmake.in
rs/libmoq/native-libs/: apple.txt  linux.txt  windows.txt
rs/libmoq/src/: api.rs  audio.rs  cache.rs  consume.rs  error.rs  ffi.rs  id.rs  lib.rs  origin.rs  publish.rs  runtime.rs  session.rs  state.rs  test.rs  uniffi_api.rs  video.rs
rs/libmoq/tests/: broadcast.rs
rs/moq-audio/: CHANGELOG.md  Cargo.toml
rs/moq-audio/src/: capture.rs  codec.rs  consumer.rs  error.rs  format.rs  frame.rs  lib.rs  opus.rs  producer.rs  resample.rs  samples.rs
rs/moq-audio/src/capture/: channel.rs  permission.rs  screencapture.rs
rs/moq-audio/src/codec/: mod.rs  opus.rs
rs/moq-audio/src/decode/: consumer.rs  decoder.rs  mod.rs
rs/moq-audio/src/encode/: capture.rs  encoder.rs  mod.rs  producer.rs
rs/moq-audio/tests/: roundtrip.rs
rs/moq-data/: Cargo.toml  README.md
rs/moq-data/src/: lib.rs  set.rs  sizer.rs
rs/moq-dummy-raw/: Cargo.toml
rs/moq-dummy-raw/src/: main.rs
rs/moq-ffi/: CHANGELOG.md  Cargo.toml  README.md  build.sh  pyproject.toml
rs/moq-ffi/examples/: server_smoke.py
rs/moq-ffi/src/: android.rs  api.rs  audio.rs  cache.rs  consume.rs  consumer.rs  error.rs  ffi.rs  id.rs  json.rs  lib.rs  log.rs  media.rs  origin.rs  producer.rs  server.rs  session.rs  test.rs
rs/moq-hls/: CHANGELOG.md  Cargo.toml
rs/moq-hls/src/: error.rs  import.rs  ingest.rs  lib.rs
rs/moq-hls/src/egress/: mod.rs  playlist.rs  rendition.rs  store.rs
rs/moq-hls/src/export/: master.rs  mod.rs  playlist.rs  rendition.rs  renditions.rs  segments.rs  store.rs
rs/moq-hls/src/server/: mod.rs  routes.rs
rs/moq-lite/: CHANGELOG.md  Cargo.toml  README.md
rs/moq-lite/src/: client.rs  error.rs  lib.rs  path.rs  server.rs  session.rs  setup.rs  stats.rs  task.rs  version.rs
rs/moq-lite/src/coding/: decode.rs  encode.rs  message.rs  mod.rs  reader.rs  size.rs  stream.rs  varint.rs  version.rs  writer.rs
rs/moq-lite/src/ietf/: adapter.rs  control.rs  fetch.rs  goaway.rs  group.rs  location.rs  message.rs  mod.rs  namespace.rs  parameters.rs  properties.rs  publish.rs  publish_namespace.rs  publisher.rs  request.rs  session.rs  setup.rs  subscribe.rs  subscribe_namespace.rs  subscriber.rs  time.rs  track.rs  version.rs
rs/moq-lite/src/lite/: announce.rs  datagram.rs  fetch.rs  frame.rs  group.rs  info.rs  message.rs  mod.rs  parameters.rs  priority.rs  probe.rs  publisher.rs  session.rs  stream.rs  subscribe.rs  subscriber.rs  time.rs  version.rs
rs/moq-lite/src/model/: broadcast.rs  datagram.rs  delivery.rs  expires.rs  frame.rs  group.rs  mod.rs  origin.rs  origin_id.rs  pair.rs  produce.rs  state.rs  subscriber.rs  time.rs  track.rs  track_meta.rs  waiter.rs
rs/moq-nvenc/: CHANGELOG.md  Cargo.toml  README.md  build.rs
rs/moq-nvenc/src/: cuvid.rs  lib.rs
rs/moq-nvenc/src/safe/: api.rs  buffer.rs  builders.rs  encoder.rs  mod.rs  result.rs  session.rs
rs/moq-nvenc/src/sys/: guid.rs  mod.rs  version.rs
rs/moq-rtc/: CHANGELOG.md  Cargo.toml
rs/moq-rtc/src/: egress.rs  error.rs  ingest.rs  lib.rs  sdp.rs  session.rs  whep.rs  whip.rs
rs/moq-rtc/src/client/: mod.rs  whep.rs  whip.rs
rs/moq-rtc/src/codec/: av1.rs  bitstream_test.rs  h264.rs  h265.rs  mod.rs  opus.rs  vp8.rs  vp9.rs
rs/moq-rtc/src/server/: mod.rs  whep.rs  whip.rs
rs/moq-rtc/src/session/: ingest.rs  mod.rs
rs/moq-rtc/tests/: bitstream.rs
rs/moq-rtmp/: CHANGELOG.md  Cargo.toml  README.md
rs/moq-rtmp/src/: dial.rs  lib.rs  listen.rs  server.rs
rs/moq-rtmp/src/rml/: mod.rs
rs/moq-transcode/: CHANGELOG.md  Cargo.toml  README.md
rs/moq-transcode/examples/: transcode.rs
rs/moq-transcode/src/: catalog.rs  config.rs  error.rs  feed.rs  lib.rs  rung.rs  scale.rs
rs/moq-vaapi/: .gitignore  Cargo.toml  bindgen_gen.rs  build.rs
rs/moq-vaapi/src/: bitstream_utils.rs  buffer.rs  config.rs  context.rs  display.rs  encode.rs  image.rs  lib.rs  picture.rs  surface.rs
rs/moq-vaapi/src/buffer/: av1.rs  enc_misc.rs  hevc.rs  jpeg_baseline.rs  vp9.rs
rs/moq-video/: CHANGELOG.md  Cargo.toml  DESIGN-native-codecs.md  README.md
rs/moq-video/src/: camera.rs  capture.rs  error.rs  frame.rs  lib.rs  mf.rs  producer.rs  size.rs  win.rs
rs/moq-video/src/capture/: avfoundation.rs  channel.rs  desktopduplication.rs  mediafoundation.rs  mod.rs  pipewire.rs  pump.rs  queue.rs  screencapture.rs  surface.rs  v4l2.rs  webcam.rs
rs/moq-video/src/decode/: consumer.rs  decoder.rs  (+1 more)
(+1730 files in other folders)
