[workspace]
# moq-nvenc lives in-tree but is excluded from the workspace: it only compiles on
# Linux/Windows (no macOS bindings), so a workspace-wide `cargo build` on macOS
# would fail on it. It is pulled in as a path dependency only where a Linux target
# needs it (moq-video's `nvenc` feature).
exclude = ["rs/moq-nvenc"]
members = [
    "rs/hang",
    "rs/kio",
    "rs/libmoq",
    "rs/moq-audio",
    "rs/moq-bench",
    "rs/moq-boy",
    "rs/moq-cli",
    "rs/moq-ffi",
    "rs/moq-flate",
    "rs/moq-gst",
    "rs/moq-hls",
    "rs/moq-json",
    "rs/moq-loc",
    "rs/moq-msf",
    "rs/moq-mux",
    "rs/moq-native",
    "rs/moq-net",
    "rs/moq-relay",
    "rs/moq-rtc",
    "rs/moq-rtmp",
    "rs/moq-srt",
    "rs/moq-token",
    "rs/moq-token-cli",
    "rs/moq-video",
    "rs/moq-wasm",
]
default-members = [
    "rs/kio",
    "rs/hang",
    # "rs/libmoq",    # requires C toolchain
    "rs/moq-boy",
    "rs/moq-audio",
    "rs/moq-bench",
    "rs/moq-cli",
    # "rs/moq-ffi",   # requires Python/maturin
    # "rs/moq-gst",   # requires GStreamer
    "rs/moq-flate",
    "rs/moq-hls",
    "rs/moq-json",
    "rs/moq-loc",
    "rs/moq-msf",
    "rs/moq-net",
    "rs/moq-mux",
    "rs/moq-native",
    "rs/moq-relay",
    "rs/moq-rtc",
    "rs/moq-rtmp",
    "rs/moq-srt",
    "rs/moq-token",
    "rs/moq-token-cli",
    # "rs/moq-wasm",  # wasm32-unknown-unknown target only
    "rs/moq-video",
]
resolver = "2"

[workspace.package]
rust-version = "1.85"

[workspace.dependencies]
flate2 = "1.1"
hang = { version = "0.19", path = "rs/hang" }
kio = { version = "0.4", path = "rs/kio" }
moq-audio = { version = "0.0.6", path = "rs/moq-audio" }
moq-flate = { version = "0.1.0", path = "rs/moq-flate" }
moq-hls = { version = "0.0.1", path = "rs/moq-hls", default-features = false }
moq-json = { version = "0.1.1", path = "rs/moq-json" }
moq-loc = { version = "0.1", path = "rs/moq-loc" }
moq-msf = { version = "0.3", path = "rs/moq-msf" }
moq-mux = { version = "0.7", path = "rs/moq-mux" }
moq-native = { version = "0.17", path = "rs/moq-native", default-features = false }
moq-net = { version = "0.1", path = "rs/moq-net" }
# Linux/Windows-only NVENC bindings; excluded from the workspace (see [workspace]
# exclude) and only built when a Linux target pulls it. Forked from
# ViliamVadocz/nvidia-video-codec-sdk to add the `dynamic-loading` feature.
moq-nvenc = { version = "0.0.1", path = "rs/moq-nvenc", default-features = false }
moq-rtc = { version = "0.0.1", path = "rs/moq-rtc" }
moq-rtmp = { version = "0.0.1", path = "rs/moq-rtmp" }
moq-srt = { version = "0.0.1", path = "rs/moq-srt" }
moq-token = { version = "0.6", path = "rs/moq-token" }
# Standalone crate (moq-dev/vaapi); vendored from cros-libva + cros-codecs.
moq-vaapi = "0.0.2"
# default-features off (the `nvenc` / `vaapi` hardware encoders) so each consumer
# opts in: binaries (libmoq, moq-boy, moq-cli) enable them, but a self-compiler can
# leave them off to drop the CUDA / libva deps. moq-video itself still defaults them on.
moq-video = { version = "0.0.6", path = "rs/moq-video", default-features = false }
qmux = { version = "0.2", default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = "1.48"
web-async = { version = "0.1.4", features = ["tracing"] }
web-transport-iroh = "0.6"
# default-features off so the QUIC crypto provider is chosen by moq-native's
# aws-lc-rs / ring features (mirroring how the quinn dependency is wired).
web-transport-noq = { version = "0.2.0", default-features = false }
web-transport-proto = "0.6"
web-transport-quiche = "0.4"
web-transport-quinn = "0.11"
web-transport-trait = "0.3.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
# frame pointers: pass RUSTFLAGS="-C force-frame-pointers=yes" when building

[profile.release-with-debug]
inherits = "release"
debug = true

# Size-optimized build for the browser/WASM bindings (rs/moq-wasm). Shipping over
# the wire, so optimize for size, not speed (~579KB -> ~471KB gzipped vs the
# default release profile). `just wasm` builds with `--profile wasm-release`.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
