[workspace]
members = [
    "rs/hang",
    "rs/kio",
    "rs/libmoq",
    "rs/moq-audio",
    "rs/moq-bench",
    "rs/moq-boy",
    "rs/moq-cli",
    "rs/moq-ffi",
    "rs/moq-flate",
    "rs/moq-gst",
    "rs/moq-hls",
    "rs/moq-json",
    "rs/moq-loc",
    "rs/moq-msf",
    "rs/moq-mux",
    "rs/moq-native",
    "rs/moq-net",
    "rs/moq-nvenc",
    "rs/moq-relay",
    "rs/moq-rtc",
    "rs/moq-rtmp",
    "rs/moq-srt",
    "rs/moq-stats",
    "rs/moq-token",
    "rs/moq-token-cli",
    "rs/moq-transcode",
    "rs/moq-video",
    "rs/moq-wasm",
]
default-members = [
    "rs/kio",
    "rs/hang",
    # "rs/libmoq",    # requires C toolchain
    "rs/moq-boy",
    "rs/moq-audio",
    "rs/moq-bench",
    "rs/moq-cli",
    # "rs/moq-ffi",   # requires Python/maturin
    # "rs/moq-gst",   # requires GStreamer
    "rs/moq-flate",
    "rs/moq-hls",
    "rs/moq-json",
    "rs/moq-loc",
    "rs/moq-msf",
    "rs/moq-net",
    "rs/moq-mux",
    "rs/moq-native",
    "rs/moq-nvenc",
    "rs/moq-relay",
    "rs/moq-rtc",
    "rs/moq-rtmp",
    "rs/moq-srt",
    "rs/moq-stats",
    "rs/moq-token",
    "rs/moq-token-cli",
    "rs/moq-transcode",
    "rs/moq-video",
    # "rs/moq-wasm",  # wasm32-unknown-unknown target only
]
resolver = "2"

[workspace.package]
# Floor for the library surface: iroh 1.0 (via moq-native) needs 1.91. This is
# what consumers of moq-net / hang / moq-native / etc. see. moq-relay overrides
# it to 1.95 (sysinfo 0.39). moq-relay is lib+bin, so 1.95 does apply to its
# own library target, but that crate is an application with no external
# consumers; the point of the override is to keep the bump off the libraries
# others actually build on. The nix flake / rust-toolchain.toml pin the build
# toolchain to 1.95 (so the whole workspace including the relay compiles) rather
# than latest stable, which keeps the relay's ceiling from creeping up unnoticed.
rust-version = "1.91"

[workspace.dependencies]
flate2 = "1.1"
hang = { version = "0.20", path = "rs/hang" }
kio = { version = "0.5", path = "rs/kio" }
moq-audio = { version = "0.0.12", path = "rs/moq-audio" }
moq-flate = { version = "0.1.1", path = "rs/moq-flate" }
moq-hls = { version = "0.4.1", path = "rs/moq-hls", default-features = false }
moq-json = { version = "0.3.1", path = "rs/moq-json" }
moq-loc = { version = "0.2", path = "rs/moq-loc" }
moq-msf = { version = "0.4", path = "rs/moq-msf" }
moq-mux = { version = "0.8", path = "rs/moq-mux" }
moq-native = { version = "0.19", path = "rs/moq-native", default-features = false }
moq-net = { version = "0.2", path = "rs/moq-net" }
# NVENC bindings, forked from ViliamVadocz/nvidia-video-codec-sdk to dlopen the
# driver at runtime. Compiles on any platform (macOS included) but only actually
# used by moq-video on Linux.
moq-nvenc = { version = "0.0.2", path = "rs/moq-nvenc" }
moq-rtc = { version = "0.2.1", path = "rs/moq-rtc" }
moq-rtmp = { version = "0.2.1", path = "rs/moq-rtmp" }
moq-srt = { version = "0.2.1", path = "rs/moq-srt" }
moq-stats = { version = "0.1.2", path = "rs/moq-stats" }
moq-token = { version = "0.7", path = "rs/moq-token" }
# default-features off (the hardware codecs) on moq-transcode and moq-video so
# each consumer opts in: binaries (libmoq, moq-boy, moq-cli) enable them, but a
# self-compiler can leave them off to drop the CUDA / libva deps. Both crates
# still default them on when depended on directly.
moq-transcode = { version = "0.0.3", path = "rs/moq-transcode", default-features = false }
# Standalone crate (moq-dev/vaapi); vendored from cros-libva + cros-codecs.
# dlopen's libva at runtime (no libva-dev at build, no NEEDED libva in the binary).
moq-vaapi = "0.0.3"
moq-video = { version = "0.0.9", path = "rs/moq-video", default-features = false }
qmux = { version = "0.4.0", default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = "1.48"
web-async = { version = "0.1.5", features = ["tracing"] }
web-transport-iroh = "0.6"
# default-features off so the QUIC crypto provider is chosen by moq-native's
# aws-lc-rs / ring features (mirroring how the quinn dependency is wired).
# 0.2.1 for the `qlog` passthrough feature moq-native's `qlog` forwards to.
web-transport-noq = { version = "0.2.1", default-features = false }
web-transport-proto = "0.6"
web-transport-quiche = "0.4"
web-transport-quinn = "0.11"
web-transport-trait = "0.3.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
# frame pointers: pass RUSTFLAGS="-C force-frame-pointers=yes" when building

[profile.release-with-debug]
inherits = "release"
debug = true

# Size-optimized build for the browser/WASM bindings (rs/moq-wasm). Shipping over
# the wire, so optimize for size, not speed (~579KB -> ~471KB gzipped vs the
# default release profile). `just wasm` builds with `--profile wasm-release`.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
