[package]
name = "moq-robo"
description = "Media over QUIC - Robotics Demo"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[features]
default = ["quinn", "websocket"]
quinn = ["moq-native/quinn"]
websocket = ["moq-native/websocket"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
ffmpeg-next = "8"
hex = "0.4"
rand = "0.9"
hang = { workspace = true }
moq-lite = { workspace = true }
moq-mux = { workspace = true }
moq-native = { workspace = true, default-features = false, features = ["aws-lc-rs"] }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
url = "2"
