[package]
name = "moq-audio"
description = "Native audio encoding/decoding for Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.0.1"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "audio"]
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]

[package.metadata.cargo-shear]
# audiopus_sys is referenced only via the `static` feature it provides;
# we pull it in explicitly to vendor libopus into our staticlib.
ignored = ["audiopus_sys"]

[lib]
doctest = false

[dependencies]
audiopus_sys = { version = "0.2", default-features = false, features = ["static"] }
bytes = "1"
hang = { workspace = true }
moq-mux = { workspace = true }
moq-net = { workspace = true }
opus = "0.3"
rubato = "0.16"
thiserror = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
