[package]
name = "moq-lite"
description = "Media over QUIC - Transport (Lite)"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.16.0"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[features]
# Retained for backwards compatibility; serde is now always available.
serde = []

[dependencies]
bytes = "1"
conducer = { workspace = true }
futures = "0.3"
num_enum = "0.7"
rand = "0.9.2"
serde = { workspace = true, features = ["rc"] }
serde_json = "1"
thiserror = "2"
tokio = { workspace = true, features = ["macros", "io-util", "sync", "test-util", "time"] }
tracing = "0.1"
web-async = { workspace = true }
web-transport-trait = { workspace = true }
