[package]
name = "moq-nvenc"
version = "0.0.1"
edition = "2021"
license = "MIT"
rust-version = "1.85"

description = "(AI GENERATED) NVENC hardware video encoder bindings, forked from ViliamVadocz/nvidia-video-codec-sdk with runtime dynamic loading"
repository = "https://github.com/moq-dev/moq"
readme = "README.md"

keywords = ["encoding", "nvidia", "nvenc", "cuda", "video"]
categories = ["multimedia::encoding", "hardware-support"]

[dependencies]
# Only cudarc's `driver` API is used. The CUDA version is selected by a feature:
# the default `cuda-version-from-build-system` keeps the historical build (detects
# CUDA from the toolchain). For a build that needs no CUDA toolkit (e.g. with
# `dynamic-loading`), disable default features and pick a `cudarc/cuda-NNNNN`.
cudarc = { version = "0.19", default-features = false, features = ["driver"] }
lazy_static = "1.5.0"
# Only used by the `dynamic-loading` feature, to dlopen libnvidia-encode. Pinned
# to 0.8 (0.9 requires rustc 1.88, above our MSRV).
libloading = { version = "0.8", optional = true }

[features]
default = ["cuda-version-from-build-system"]
# Detect the installed CUDA version from the build system (the historical
# default). Disable default features to opt out, e.g. for a toolkit-less build.
cuda-version-from-build-system = ["cudarc/cuda-version-from-build-system"]
# Load libnvidia-encode at runtime via dlopen instead of linking it. Lets a
# binary built without the NVIDIA driver still run (and fall back) on machines
# that lack it; the build no longer needs the driver lib present either. Only the
# two NVENC bootstrap symbols are dlopen'd; NVDEC symbols are neither linked nor
# loaded under this feature.
dynamic-loading = ["dep:libloading"]
