[package]
name = "moq-rtmp"
description = "RTMP / enhanced-RTMP contribution ingest gateway for Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.0.1"
edition = "2024"
rust-version.workspace = true

keywords = ["rtmp", "moq", "media", "live", "flv"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
doctest = false

[[bin]]
name = "moq-rtmp"
path = "bin/moq-rtmp.rs"
doc = false
# The binary (relay client/server, CLI) needs the `server` feature; the library
# can be depended on with `default-features = false` for ingest only (e.g. a
# relay that embeds the RTMP listener and publishes into its own origin).
required-features = ["server"]

[features]
default = ["server", "quinn", "websocket"]
# Relay client/server transports + the moq-rtmp binary. Pulls in moq-native /
# axum / clap / rustls.
server = ["dep:axum", "dep:axum-server", "dep:clap", "dep:moq-native", "dep:rustls", "dep:sd-notify", "dep:tower-http", "dep:url"]
quinn = ["server", "moq-native/quinn"]
quiche = ["server", "moq-native/quiche"]
websocket = ["server", "moq-native/websocket"]
iroh = ["server", "moq-native/iroh"]

# The ingest library needs only anyhow/bytes/moq-mux/moq-net/rml_rtmp/thiserror/
# tokio/tracing; the rest (axum/clap/moq-native/rustls/tower-http/url/sd-notify)
# are `optional` and pulled in by the `server` feature for the binary.
[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
axum = { version = "0.8", features = ["tokio"], optional = true }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
bytes = "1"
clap = { version = "4", features = ["derive"], optional = true }
futures = "0.3"
moq-mux = { workspace = true }
moq-native = { workspace = true, default-features = false, features = ["aws-lc-rs"], optional = true }
moq-net = { workspace = true }
# Pure-Rust RTMP (no librtmp / ffmpeg): handshake + chunk codec + the
# server-session state machine. RTMP carries FLV, demuxed by moq-mux.
rml_rtmp = "0.8"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"], optional = true }
thiserror = "2"
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
tracing = "0.1"
url = { version = "2", optional = true }

[target.'cfg(unix)'.dependencies]
sd-notify = { version = "0.5", optional = true }
